fix: Toast clipping
Closes https://github.com/momentum-mod/game/issues/1803

--- a/styles/modals/toasts/toast.scss
+++ b/styles/modals/toasts/toast.scss
@@ -13,6 +13,7 @@
 	&__right {
 		flow-children: down;
 		vertical-align: top;
+		overflow: noclip;
 
 		width: 30%;
 		height: 100%;
